--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "express-ws": "^5.0.2",
     "ws": "^7.2.3"
   },
   "author": "andrej popp",
